Fixed no horizontal scrolling on smaal screens Dynamic flush of footer to bottom

--- a/website/static/sass/recruiter.scss
+++ b/website/static/sass/recruiter.scss
@@ -79,16 +79,22 @@ $red: #b94a48;
 
 html {
   position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  // margin-bottom: 180px;
-  font-family: 'Cabin', sans-serif;
-  font-size: 2em;
-  // line-height: 2em;
+  height: 100%;
 }
 
+body {
+  font-family: 'Cabin', sans-serif;
+  font-size: 2em;
+  height: 100%;
+}
+
+/* Wrapper for page content to push down footer */
+#main-wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -255px; /* the bottom margin is the negative value of the footer's height */
+}
 
 h1 {
   font-family: 'Droid Sans', sans-serif;
@@ -125,6 +131,8 @@ h3 {
   .content-parallax {
     width: 400px;
     height: 400px;
+    max-width:100%;
+    max-height:100%;
   }
 
   .col-no-padding {
@@ -170,7 +178,8 @@ h3 {
   overflow: hidden;
   width: 20em;
   height: 20em;
-  max-width: 40em;
+  max-width:100%;
+  max-height:100%;
   border-radius: 1em;
   border: 3px solid $white;
   z-index: 10;
@@ -208,6 +217,8 @@ h3 {
 .footer-logo {
     width: 100px;
     height: 100px;
+  max-width:100%;
+    max-height:100%;
 }
 
 .footer-logo img{
@@ -216,15 +227,19 @@ h3 {
 }
 
 .footer-distributed{
+  position: relative;
 	background-color: #292c2f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-
 	padding: 55px 50px;
+  min-height: 145px;
+}
 
+#footer-push{
+  height: 255px;
 }
 
 /* The company logo */
